@@ -1,3 +1,4 @@
+18. Jul. 2013 - amo - update in JACPContext and JACPManagedDialog to pass the correct accessor class, moved CustomSecurityManager to class
 18. Jul. 2013 - amo - removed @CallbackComponent annotation, updated ICallbackComponent an IStatelessComponent
 04. Jul. 2013 - amo - initial commit of changing component model to pure interface model... developers should implement components instead of extending
 04. Jul. 2013 - amo - initial commit of Context, which contains basic metadata as well as the message listeners and will contain stuff like managedDialog factory
